part2: can upload pictures/ bugs: refresh needed & wrong position

--- a/public/style.css
+++ b/public/style.css
@@ -1,25 +1,16 @@
 div.images-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
 div.images-container div {
   text-align: center;
+  border: 1px solid black;
+  border-radius: 15px;
 }
 
 div.images-container img {
   margin-top: 1rem;
   max-width: 20rem;
   max-height: 30rem;
-}
-
-#main {
-  background: white;
-  text-decoration: none;
-  color: #444;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
 }
